--- a/trac/admin/templates/admin_enums.html
+++ b/trac/admin/templates/admin_enums.html
@@ -13,7 +13,7 @@
     <h2>Manage $label_plural</h2>
 
     <py:choose>
-      <form py:when="defined('enum')" class="mod" id="modenum" method="post">
+      <form py:when="enum" class="mod" id="modenum" method="post">
         <fieldset>
           <legend>Modify $label_singular</legend>
           <div class="field">
